--- a/install.Rmd
+++ b/install.Rmd
@@ -4,23 +4,23 @@ output:
   html_document: default
   pdf_document:
     fig_caption: no
+runtime: shiny
 ---
-
-```{r, echo=FALSE, warning=FALSE, message=FALSE}
-whichcomp <- strsplit(getwd(),"/")[[1]][3]
-load(paste0("c:/users/", whichcomp, "/Dropbox/Resma3/Resma3.RData"))
-
-require(knitr)
-require(ggplot2)
-require(grid)
-require(leaps)
-```
-`r rmd$basefontsize()`
-
 <style>
 table, th, td { text-align:right; }
 th, td {padding: 10px;}
 </style>
+
+```{r, echo=FALSE, warning=FALSE, message=FALSE}
+whichcomp <- strsplit(getwd(),"/")[[1]][3]
+load(paste0("c:/users/", whichcomp, "/Dropbox/teaching/Resma3/Resma3.RData"))
+library(knitr)
+opts_chunk$set(fig.width=6, fig.align = "center", 
+      out.width = "70%", warning=FALSE, message=FALSE)
+library(ggplot2)
+library(grid)
+```
+`r hl()$basefontsize()`
 
 #Installation and Updating
 
@@ -39,7 +39,7 @@ You can get a free version of R for your computer from a number of sources. The 
 
 -  This will take a few minutes, just wait until the > sign appears.
 
-`r rmd$hr()`
+`r hl()$hr()`
 
 **FOR MAC OS USERS ONLY**
 
@@ -64,7 +64,7 @@ We will run R using an interface called **RStudio**. You can download it at [RSt
 R releases new versions about every three months or so. In general it is not necessary to get the latest version every time. Every now and then a package won't run under the old version, and then it is time to do so. In essence this just means to install the latest version of R from CRAN. More important is to now also update ALL your packages to the latest versions. This is done simply by running
 
 ```{r, eval=FALSE}
-update.packages()
+update.packages(ask=FALSE, dependencies=TRUE)
 ```
 
 
