--- a/bayes.Rmd
+++ b/bayes.Rmd
@@ -223,10 +223,11 @@ and this integral does not exist. We will have to use numerical methods instead.
 fmu <- function(mu) 
   dnorm(mean(dta.norm), mu, 2.3/sqrt(20))*dgamma(mu, 5, 1)
 mx <- integrate(fmu, lower=0, upper=Inf)$value
-mu.f <- function(mu) fmu(mu)/mx
-integrate(function(mu) {mu*mu.f(mu)}, lower=0, upper=Inf)$value
+posterior.density <- function(mu) fmu(mu)/mx
+posterior.mean <- integrate(function(mu) {mu*posterior.density(mu)}, 
+        lower=0, upper=Inf)$value
+round(posterior.mean, 2)
 ```
-
 
 how about a 95% credible interval? This we need to solve the equations
 
@@ -234,28 +235,40 @@ $$
 F(\mu|\textbf{x})=0.025\text{, }F(\mu|\textbf{x})=0.975
 $$
 
-where $F$ is the posterior distribution function. Again we need to work numerically:
+where $F$ is the posterior distribution function. Again we need to work numerically. We can use a simple bisection algorithm:
 
 ```{r}
-mu.F <- function(t) integrate(mu.f, lower=0, upper=t)$value 
-t <- 0
+pF <- function(t) integrate(posterior.density, 
+            lower=3, upper=t)$value
+cc <- (1-0.95)/2
+l <- 3
+h <- posterior.mean 
 repeat {
-  t <- t+0.01
-  if(mu.F(t)>0.025) break
+    m <- (l+h)/2
+    if(pF(m)<cc) l <- m
+    else h <- m
+    if(h-l<m/1000) break
 }
-left <- t
+left.endpoint <- m
+h <- 8
+l <- posterior.mean 
 repeat {
-  t <- t+0.01
-  if(mu.F(t)>0.975) break
+    m <- (l+h)/2
+    if(pF(m)<1-cc) l <- m
+    else h <- m
+    if(h-l<m/1000) break
 }
-c(left, t)
+right.endpoint <- m
+round(c(left.endpoint, right.endpoint), 2)
 ```
 
 Let's generalize all this and write a routine that will find a point estimate and a $(1-\alpha)100\%$ credible interval for any problem with one parameter:
 
 ```{r}
-bayes.credint <- function(x, df, prior, conf.level=0.95,
-          step=0.01, lower=-Inf, upper=Inf,  Show=TRUE, rg) {
+bayes.credint <- function(x, df, prior, conf.level=0.95, acc=0.001,
+          lower, upper,  Show=TRUE) {
+  if(any(c(missing(lower), missing(upper))))
+    cat("Need to give lower and upper boundary\n")
   posterior.density <- function(par, x) {
     y <- 0*seq_along(par)
     for(i in seq_along((par)))
@@ -266,7 +279,7 @@ bayes.credint <- function(x, df, prior, conf.level=0.95,
   mx <- integrate(posterior.density, 
           lower=lower, upper=upper, x=x)$value
   if(Show) {
-     par <- seq(rg[1], rg[2], length=250)
+     par <- seq(lower, upper, length=250)
      y <- posterior.density(par, x)
      plot(par, y, type="l")
   }
@@ -276,19 +289,27 @@ bayes.credint <- function(x, df, prior, conf.level=0.95,
   if(Show) abline(v=parhat)
   pF <- function(t, x) integrate(posterior.density, 
             lower=lower, upper=t, x=x)$value 
-  t <- lower
+  cc <- (1-conf.level)/2
+  l <- lower
+  h <- parhat 
   repeat {
-      t <- t+step
-      if(pF(t, x)>(1-conf.level)/2) break
+    m <- (l+h)/2
+    if(pF(m, x)<cc) l <- m
+    else h <- m
+    if(h-l<acc*m) break
   }
-  left <- t
-  t <- upper
+  left.endpoint <- m
+  h <- upper
+  l <- parhat 
   repeat {
-      t <- t-step
-      if(pF(t, x)<1-(1-conf.level)/2) break
+    m <- (l+h)/2
+    if(pF(m, x)<1-cc) l <- m
+    else h <- m
+    if(h-l<acc*m) break
   }
-  if(Show) abline(v=c(left, t))
-  c(parhat, left, t)
+  right.endpoint <- m
+  if(Show) abline(v=c(left.endpoint, right.endpoint))
+  c(parhat, left.endpoint, right.endpoint)
 }
 ```
 
@@ -297,8 +318,8 @@ bayes.credint <- function(x, df, prior, conf.level=0.95,
 ```{r}
 df <- function(x, par) dnorm(x, par, 2.3/sqrt(20))
 prior <- function(par) dnorm(par, 5, 2.3)
-bayes.credint(mean(dta.norm), df=df, prior=prior,
-      lower=2, upper=9, Show=T, rg=c(4,7))
+round(bayes.credint(mean(dta.norm), df=df, prior=prior,
+      lower=3, upper=8, Show=T), 2)
 ```
 
 ###Example Binomial proportion, uniform prior
@@ -306,11 +327,11 @@ bayes.credint(mean(dta.norm), df=df, prior=prior,
 ```{r}
 df <- function(x, par) dbinom(x, 134, par)
 prior <- function(par) dunif(par)
-bayes.credint(x=31, df=df, prior=prior, step=0.001, conf.level = 0.9,
-      lower=0, upper=1, Show=T, rg=c(0.1, 0.4))
+round(100*bayes.credint(x=31, df=df, prior=prior, acc=0.0001,
+   conf.level = 0.9,  lower=0.1, upper=0.4, Show=T), 1)
 ```
 
-which is the same 
+which is the same before:
 
 ```{r}
 round(qbeta(c(0.05, 0.95), 31 + 1, 134 - 31 + 1)*100, 1)
@@ -321,8 +342,8 @@ round(qbeta(c(0.05, 0.95), 31 + 1, 134 - 31 + 1)*100, 1)
 ```{r}
 df <- function(x, par) dnorm(x, par, 2.3/sqrt(20))
 prior <- function(par) dgamma(par, 5, 1)
-bayes.credint(mean(dta.norm), df=df, prior=prior,
-      lower=2, upper=9, Show=T, rg=c(4,7))
+round(bayes.credint(mean(dta.norm), df=df, prior=prior,
+      lower=4, upper=7, Show=TRUE), 2)
 ```
 
 ###Example: Binomial proportion, Lincoln's hat prior
@@ -338,8 +359,8 @@ curve(prior, 0, 1, ylim=c(0, 11))
 
 ```{r}
 df <- function(x, par) dbinom(x, 1000, par)
-bayes.credint(x=578, df=df, prior=prior, step=0.001,
-      lower=0, upper=1, Show=T, rg=c(0.5, 0.65))
+round(bayes.credint(x=578, df=df, prior=prior, acc=0.0001,
+      lower=0.5, upper=0.65, Show=TRUE), 3)
 ```
 
 
@@ -361,8 +382,8 @@ Now what is df? Because this is an independent sample we find $df(x, a) = \prod_
 ```{r}
 df <- function(x, par) prod(dbeta(x, par, par))
 prior <- function(par) dgamma(par, 2, 1)
-bayes.credint(dta.beta1, df=df, prior=prior,
-      lower=1.5, upper=2.5, Show=T, rg=c(1.5, 2.5))
+round(bayes.credint(dta.beta1, df=df, prior=prior,
+      lower=1.5, upper=2.5, Show=TRUE), 2)
 ```
 
 so far, so good. But now
@@ -370,7 +391,7 @@ so far, so good. But now
 ```{r error=TRUE}
 dta.beta2 <- round(rbeta(10000, 2, 2), 3)
 bayes.credint(dta.beta2, df=df, prior=prior,
-      lower=1.5, upper=2.5, Show=T, rg=c(1.5, 2.5))
+      lower=1.5, upper=2.5, Show=TRUE)
 ```
 
 Why does this not work? The problem is that the values is $\prod_{i=1}^n \text{dbeta}(x_i, a, a)$ get so small that R can't handle them anymore!
